trunk/Archive2/9d/bd05509b3ff87d/output
main.cpp:31:13: error: stray ‘\357’ in program
             ￼￼total.Book_Name = trans.Book_Name;
             ^
main.cpp:31:13: error: stray ‘\277’ in program
main.cpp:31:13: error: stray ‘\274’ in program
main.cpp:31:13: error: stray ‘\357’ in program
main.cpp:31:13: error: stray ‘\277’ in program
main.cpp:31:13: error: stray ‘\274’ in program
main.cpp:33:13: error: stray ‘\357’ in program
             ￼￼total.Revenue = trans.Revenue;
             ^
main.cpp:33:13: error: stray ‘\277’ in program
main.cpp:33:13: error: stray ‘\274’ in program
main.cpp:33:13: error: stray ‘\357’ in program
main.cpp:33:13: error: stray ‘\277’ in program
main.cpp:33:13: error: stray ‘\274’ in program
